--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,13 @@
 
 <body>
   <div id="root"></div>
+  <br>
+  <br>
+  <div class="container">
+    <center><p> The data is updated twice a day so you may find it unrelevant for your location</p></center>
+  </div>
+  <br><hr>
+  <br>
   <footer class="container-fluid" style="background-color: black; color: white;">
   	<center> COPYRIGHT @ Karan Singh</center>
   </footer>
