--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,9 @@
   <br>
  <hr>
   <div class="container">
-    <center><p> The data is updated twice a day so you may find it unrelevant for your location</p></center>
+    <center><p> The data is updated twice a day so you may find it irrelevant for your location</p></center>
   </div>
   <hr>
-  <br>
   <footer class="container-fluid" style="background-color: black; color: white;">
   	<center> COPYRIGHT @ Karan Singh</center>
   </footer>
